exports[`Schedule - Splash Screen renders correctly 1`] = `
<View
  style={
    Object {
      "zIndex": 2,
    }
  }>
  <View
    style={
      Object {
        "height": 180,
      }
    } />
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": -200,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "transform": Array [
              Object {
                "translateY": 48,
              },
              Object {
                "scale": 0.8,
              },
            ],
            "zIndex": 2,
          },
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}>
      <Image
        source={1} />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -100,
          "position": "absolute",
          "right": -100,
          "transform": Array [
            Object {
              "skewY": "5deg",
            },
          ],
        }
      } />
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -100,
          "position": "absolute",
          "right": -100,
          "transform": Array [
            Object {
              "skewY": "-3deg",
            },
            Object {
              "translateY": -5,
            },
          ],
        }
      } />
  </View>
</View>
`;

exports[`Schedule - Splash Screen renders correctly in animated state 1`] = `
<View
  style={
    Object {
      "zIndex": 2,
    }
  }>
  <View
    style={
      Object {
        "height": 180,
      }
    } />
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 1734,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": -200,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "scale": 1,
              },
            ],
            "zIndex": 2,
          },
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}>
      <Image
        source={1} />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -100,
          "position": "absolute",
          "right": -100,
          "transform": Array [
            Object {
              "skewY": "5deg",
            },
          ],
        }
      } />
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -100,
          "position": "absolute",
          "right": -100,
          "transform": Array [
            Object {
              "skewY": "-3deg",
            },
            Object {
              "translateY": -5,
            },
          ],
        }
      } />
  </View>
</View>
`;
